@@ -1126,10 +1126,25 @@ var CloudCommander, Util,
         var lCurrent = pCurrentFile || DOM.getCurrentFile(),
             lLink    = DOM.getCurrentLink( lCurrent );
             
-        if(lLink)
+        if( Util.isObject(lLink) )
            lLink = lLink.title || lLink.textContent;
         
-        return lLink; 
+        return lLink;
+    };
+    
+    /**
+     * set name from current (or param) file
+     * 
+     * @param pCurrentFile
+     */
+    DOM.setCurrentName          = function(pName, pCurrentFile){
+        var lCurrent = pCurrentFile || DOM.getCurrentFile(),
+            lLink    = DOM.getCurrentLink( lCurrent );
+            
+        if(lLink)
+           lLink.title = lLink.textContent = pName;
+        
+        return lLink;
     };
     
     /** function getting FM
@@ -1307,6 +1322,23 @@ var CloudCommander, Util,
         }
         
         return lCurrent;
+    };
+    
+    /**
+     * rename current file
+     * 
+     * @pCurrent
+     */
+    DOM.renameCurrentFile       = function(pCurrentFile){
+        if( Util.isString(pCurrentFile) )
+            pCurrentFile = null;
+        
+        var lCurrent    = pCurrentFile || DOM.getCurrentFile(),
+            lName       = DOM.getCurrentName(lCurrent);
+        
+        lName = prompt("Rename", lName);
+        
+        DOM.setCurrentName(lName, lCurrent);
     };
     
     /**
