@@ -159,6 +159,7 @@ var CloudCommander, Util, DOM, $;
             lMenuItems = {
                 'View'      : Util.retExec(showEditor, true),
                 'Edit'      : Util.retExec(showEditor, false),
+                'Rename'    : DOM.renameCurrentFile,
                 'Delete'    : Util.retExec(DOM.promptDeleteCurrent),
             };
         
