@@ -159,14 +159,14 @@
                     if(lQuery === 'dir')
                         fs.rmdir(p.name, function(pError){
                         if(!pError)
-                            main.sendResponse(pParams, 'Folder ' + p.name + ' removed.');
+                            main.sendResponse(pParams, 'Folder ' + p.name + ' deleted.');
                         else
                             main.sendError(pParams, pError);
                         });
                     else 
                         fs.unlink(p.name, function(pError){
                             if(!pError)
-                                main.sendResponse(pParams, 'File ' + p.name + ' removed.');
+                                main.sendResponse(pParams, 'File ' + p.name + ' delete.');
                             else
                                 main.sendError(pParams, pError);
                         });
